# plonk_gadgets

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
benches/: poseidon.rs
src/: allocated_scalar.rs  errors.rs  helpers.rs  lib.rs  range.rs  scalar.rs
src/gadgets/: boolean.rs  ecc.rs  errors.rs  mod.rs  scalar.rs  sk_knowledge.rs
src/gadgets/poseidon_preimage/: mod.rs
src/gadgets/scalar/: mod.rs  range.rs  scalar.rs
src/gadgets/scalar_gadgets/: mod.rs  range.rs  scalar.rs
tests/: range_gadgets_tests.rs  scalar_gadgets_tests.rs
