[package]
name = "plonk_gadgets"
version = "0.5.0"
authors = ["CPerezz <carlos@dusk.network>", "Kevaundray Wedderburn <kev@dusk.network>", "Victor Lopez <victor@dusk.network>"]
edition = "2018"

[dependencies]
dusk-bytes = "0.1"
dusk-plonk = "0.5"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
rand = "0.7"
rand_core = "0.5"
