[package]
name = "plonk_gadgets"
version = "0.5.0"
authors = ["CPerezz <carlos@dusk.network>", "Kevaundray Wedderburn <kev@dusk.network>", "Victor Lopez <victor@dusk.network>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/dusk-network/plonk_gadgets"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories =["algorithms", "cryptography", "science"]
description = "A collection of generic gadgets for the PLONK ZK-Proof algorithm"
license = "MPL-2.0"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]

[dependencies]
dusk-bytes = "0.1"
dusk-plonk = {version = "0.8.0-rc.1", default-features = false, features = ["alloc"]}

[dev-dependencies]
rand = "0.8"

[features]
std = [
    "dusk-plonk/std"
]
